Add pictures and update index.html

--- a/index.html
+++ b/index.html
@@ -19,33 +19,30 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
-						<nav>
+						<h1><a href="index.html">Nicolas Martou</a></h1>
+						<!--<nav>
 							<a href="#menu">Menu</a>
-						</nav>
+						</nav>-->
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!--<nav id="menu">
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html">Portfolio</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
-					</nav>
+					</nav>-->
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>Portfolio - Nicolas Martou</h2>
+							<p>Etudiant en Bac 3 en Technologies de l'Informatique</p>
 						</div>
 					</section>
 
@@ -55,35 +52,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/img_princ.jpg" alt="Photo de Nicolas Martou" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Nicolas Martou</h2>
+										<p>Je suis étudiant et développeur. J'ai commencé à apprende le développement en 2019 lorsque je suis entré à l'EPHEC et j'essaye de m'intéresser tous les sujets. Celui dont je porte le plus d'intérêt est le jeu vidéo.</p>
+										<a href="#" class="special">Voir CV</a>
 									</div>
 								</div>
 							</section>
@@ -93,35 +66,103 @@
 								<div class="inner">
 									<h2 class="major">Vitae phasellus</h2>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									
+									<h3>Mes compétences</h3>
+									<table>
+										<tr>
+											<td><img class="table-icon" src="" /></td>
+											<td><img class="table-icon" src="" /></td>
+											<td><img class="table-icon" src="" /></td>
+											<td><img class="table-icon" src="" /></td>
+										</tr>
+										<tr>
+											<td></td>
+											<td></td>
+											<td></td>
+											<td></td>
+										</tr>
+										<tr>
+											<td></td>
+											<td></td>
+											<td></td>
+											<td></td>
+										</tr>
+										<tr>
+											<td></td>
+											<td></td>
+											<td></td>
+											<td></td>
+										</tr>
+										<tr>
+											<td></td>
+											<td></td>
+											<td></td>
+											<td></td>
+										</tr>
+										<tr>
+											<td></td>
+											<td></td>
+											<td></td>
+											<td></td>
+										</tr>
+									</table>
+									<h3>Tableau récapitulatif</h3>
+									<table>
+										<tr>
+											<th>Catégorie</th>
+											<th>Temps réel (en heure)</th>
+											<th>Temps valorisé (en heure)</th>
+											<th>Détails</th>
+										</tr>
+										<tr>
+											<td><b>Mouvement de jeunesse (Scout)</b></td>
+											<td>800</td>
+											<td>10</td>
+											<td><a href="./scout.html">ici</a></td>
+										</tr>
+										<tr>
+											<td><b>Hackaton</b></td>
+											<td>16h30</td>
+											<td>10</td>
+											<td><a href="">ici</a></td>
+										</tr>
+										<tr>
+											<td><b>Conférence développement</b></td>
+											<td>9h30</td>
+											<td>9h30</td>
+											<td><a href="">ici</a></td>
+										</tr>
+										<tr>
+											<td><b>Formation développement jeu vidéo</b></td>
+											<td>150</td>
+											<td>10</td>
+											<td><a href="">ici</a></td>
+										</tr>
+										<tr>
+											<td><b>Projet développement</b></td>
+											<td>8</td>
+											<td>8</td>
+											<td><a href="">ici</a></td>
+										</tr>
+										<tr>
+											<td><b>Conférence entrepreneuriat</b></td>
+											<td>5</td>
+											<td>5</td>
+											<td><a href="">ici</a></td>
+										</tr>
+										<tr>
+											<td><b>Formation développement web</b></td>
+											<td>15</td>
+											<td>10</td>
+											<td><a href="">ici</a></td>
+										</tr>
+										<tr>
+											<td class="end-td"><b>Total</b></td>
+											<td class="end-td">1020</td>
+											<td class="end-td">62h30</td>
+											<td class="end-td"><a href="">ici</a></td>
+										</tr>
+									</table>
 								</div>
 							</section>
 
@@ -130,41 +171,13 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<h2 class="major">Contact</h2>
+							<p>Si vous souhaitez me contacter, voici quelques informations pour vous :</p>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li class="icon solid fa-phone">+32 471 28 21 73</li>
+								<li class="icon solid fa-envelope">martounicolas@gmail.com</li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/nicolas-martou/">Nicolas Martou</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/nmartou">@nmartou</a></li>
 							</ul>
 						</div>
 					</section>
