Add stuff and all pages needed for the table

--- a/devweb.html
+++ b/devweb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mouvement de jeunesse</title>
+		<title>Formation développement web</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Mouvement de jeunesse (Scout)</h2>
-							<p>Entre septembre 2019 et juillet 2021 - 800 heures</p>
+							<h2>Formation développement web - Technofutur</h2>
+							<p>Mars 2020 - 15 heures</p>
 						</div>
 					</section>
             </div>
@@ -30,15 +30,15 @@
                     <section id="four" class="wrapper alt style1">
                         <div class="inner">
                             <h2>Description</h2>
-                            <p>J'ai fait partie des mouvements de jeunesse pendant 15 ans (2006-2021) et ça m'a apporté beaucoup de valeurs grâce aux personnes que j'ai rencontré
-                                ainsi que l'esprit que chacun essaye de maintenir. J'ai pu être chef scout durant deux années. Cette période a été riche pour moi en expérience et
-                                en rencontre. J'ai pu y développer mes compétences en gestion et en organisation. Je recommande à chacun au moins une fois dans sa vie de vivre ce 
-                                que sont les mouvements de jeunesse en tant qu'animé, cuistot ou chef.
+                            <p>En première année de mon bachelier, des formations nous ont été offertes afin que nous puissions mieux comprendre le monde 
+                                du développement web dans son fonctionnement et sa logique. J'ai pu mieux comprendre le développement en HTML et CSS.
                             </p>
-                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/scout-1.JPG"><img class="img-proof" src="images/scout-1.JPG" alt="Photo de Nicolas en camp" /></a>
-                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/scout-2.JPG"><img class="img-proof" src="images/scout-2.JPG" alt="Photo de Nicolas en camp" /></a>
+                            <a href="./Attestation_de_suivi.pdf">Attestation de suivi de la création de site web</a><br>
+                            <a href="./Martou_Nicolas_Attestation.pdf">Attestation de suivi sur le référencement de site et promotion</a>
                         </div>
                     </section>
+                    
+                <
             </section>
 
             <!-- Footer -->
