--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Nicolas Martou - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -56,7 +56,7 @@
 									<div class="content">
 										<h2 class="major">Nicolas Martou</h2>
 										<p>Je suis étudiant et développeur. J'ai commencé à apprende le développement en 2019 lorsque je suis entré à l'EPHEC et j'essaye de m'intéresser tous les sujets. Celui dont je porte le plus d'intérêt est le jeu vidéo.</p>
-										<a href="#" class="special">Voir CV</a>
+										<a href="./CV_Nicolas_Martou_FR.pdf" class="special">Voir CV</a>
 									</div>
 								</div>
 							</section>
@@ -64,10 +64,16 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Présentation complète de Nicolas</h2>
+									<p>
+										Je suis développeur FullStack et étudiant en informatique. J'étudie ce domaine depuis septembre 2019 dans l'établissement de l'EPHEC. 
+										J'y ai appris beaucoup de notions variés : Développement web (HTML, CSS, JS, React, Symfony, PHP) et applicatif (Python), configuration de réseaux (Cisco), l'administration de
+										système (DNS, Web, Mail), électronique (création de carte PCB), gestion de base de données (SQL Server), bonne pratique (DevOps, Scrum, Agile, etc..).
+										<br>J'ai effectué un stage de 3 mois dans l'entreprise The Maul Startup Studio et j'ai aussi beaucoup appris : React native (application mobile), low-code (Make.com),
+										Wordpress (https://www.jobs4hope.com/) et NFT (Solidity, Ethers, Node.js, React, Hardhat).
+									</p>
 									
-									<h3>Mes compétences</h3>
+									<!--<h3>Mes compétences</h3>
 									<table>
 										<tr>
 											<td><img class="table-icon" src="" /></td>
@@ -105,7 +111,7 @@
 											<td></td>
 											<td></td>
 										</tr>
-									</table>
+									</table>-->
 									<h3>Tableau récapitulatif</h3>
 									<table>
 										<tr>
@@ -124,37 +130,37 @@
 											<td><b>Hackaton</b></td>
 											<td>16h30</td>
 											<td>10</td>
-											<td><a href="">ici</a></td>
+											<td><a href="./hackaton.html">ici</a></td>
 										</tr>
 										<tr>
 											<td><b>Conférence développement</b></td>
 											<td>9h30</td>
 											<td>9h30</td>
-											<td><a href="">ici</a></td>
+											<td><a href="./devday.html">ici</a></td>
 										</tr>
 										<tr>
 											<td><b>Formation développement jeu vidéo</b></td>
 											<td>150</td>
 											<td>10</td>
-											<td><a href="">ici</a></td>
+											<td><a href="./unity.html">ici</a></td>
 										</tr>
 										<tr>
-											<td><b>Projet développement</b></td>
+											<td><b>Projet développement jeu vidéo</b></td>
 											<td>8</td>
 											<td>8</td>
-											<td><a href="">ici</a></td>
+											<td><a href="./dev-jeu.html">ici</a></td>
 										</tr>
 										<tr>
-											<td><b>Conférence entrepreneuriat</b></td>
+											<td><b>Salon sur l'entrepreneuriat</b></td>
 											<td>5</td>
 											<td>5</td>
-											<td><a href="">ici</a></td>
+											<td><a href="./entrepreneuriat.html">ici</a></td>
 										</tr>
 										<tr>
 											<td><b>Formation développement web</b></td>
 											<td>15</td>
 											<td>10</td>
-											<td><a href="">ici</a></td>
+											<td><a href="./devweb.html">ici</a></td>
 										</tr>
 										<tr>
 											<td class="end-td"><b>Total</b></td>
