--- a/unity.html
+++ b/unity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mouvement de jeunesse</title>
+		<title>Formation Unity</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Mouvement de jeunesse (Scout)</h2>
-							<p>Entre septembre 2019 et juillet 2021 - 800 heures</p>
+							<h2>Formation développement jeux vidéo - Unity</h2>
+							<p>A partir de mars 2021 - 150 heures</p>
 						</div>
 					</section>
             </div>
@@ -30,15 +30,19 @@
                     <section id="four" class="wrapper alt style1">
                         <div class="inner">
                             <h2>Description</h2>
-                            <p>J'ai fait partie des mouvements de jeunesse pendant 15 ans (2006-2021) et ça m'a apporté beaucoup de valeurs grâce aux personnes que j'ai rencontré
-                                ainsi que l'esprit que chacun essaye de maintenir. J'ai pu être chef scout durant deux années. Cette période a été riche pour moi en expérience et
-                                en rencontre. J'ai pu y développer mes compétences en gestion et en organisation. Je recommande à chacun au moins une fois dans sa vie de vivre ce 
-                                que sont les mouvements de jeunesse en tant qu'animé, cuistot ou chef.
+                            <p>Le jeu vidéo est une passion pour moi depuis petit. C'est un monde qui paraissait inaccessible à cause de sa difficulté de création jusqu'à ce que je découvre le développement
+                                à l'EPHEC. Unity s'est vendu comme une plateforme facile de compréhension et d'utilisation alors je m'y suis attelé. J'y ai passé des heures
+                                à comprendre des tutoriels qui traitait de l'ensemble des sujets que l'on peut retrouver dans le développement de jeux vidéo (game design, sound
+                                design, code, particle system). Tout au long de cet apprentissage j'ai pu construire plusieurs maquettes afin de m'habituer à l'outil. J'ai adoré
+                                mon expérience avec et je compte à l'avenir de construire des jeux complets que je pourrais partager sur des plateformes en ligne.
                             </p>
-                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/scout-1.JPG"><img class="img-proof" src="images/scout-1.JPG" alt="Photo de Nicolas en camp" /></a>
-                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/scout-2.JPG"><img class="img-proof" src="images/scout-2.JPG" alt="Photo de Nicolas en camp" /></a>
+                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/unity-1.PNG"><img class="img-proof" src="images/unity-1.PNG" alt="Screenshot de nombres de tutoriels complétés" /></a>
+                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/unity-2.PNG"><img class="img-proof" src="images/unity-2.PNG" alt="Screenshot de tutoriels complétés" /></a>
+                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/unity-3.PNG"><img class="img-proof" src="images/unity-3.PNG" alt="Screenshot de tutoriels complétés" /></a>
                         </div>
                     </section>
+                    
+                <
             </section>
 
             <!-- Footer -->
