--- a/dev-jeu.html
+++ b/dev-jeu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mouvement de jeunesse</title>
+		<title>Projet de jeu vidéo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Mouvement de jeunesse (Scout)</h2>
-							<p>Entre septembre 2019 et juillet 2021 - 800 heures</p>
+							<h2>Projet de jeu vidéo sous Unity</h2>
+							<p>Petit projet lancé à Pâcques 2022 - 8 heures</p>
 						</div>
 					</section>
             </div>
@@ -30,15 +30,16 @@
                     <section id="four" class="wrapper alt style1">
                         <div class="inner">
                             <h2>Description</h2>
-                            <p>J'ai fait partie des mouvements de jeunesse pendant 15 ans (2006-2021) et ça m'a apporté beaucoup de valeurs grâce aux personnes que j'ai rencontré
-                                ainsi que l'esprit que chacun essaye de maintenir. J'ai pu être chef scout durant deux années. Cette période a été riche pour moi en expérience et
-                                en rencontre. J'ai pu y développer mes compétences en gestion et en organisation. Je recommande à chacun au moins une fois dans sa vie de vivre ce 
-                                que sont les mouvements de jeunesse en tant qu'animé, cuistot ou chef.
+                            <p>Ce petit projet à pour but de me lancer doucement dans la sphère du développement du jeu vidéo en général. Ce projet a pour but d'être peu ambitieux
+                                afin déterminer si je suis capable d'apporter une application mobile de petite taille et qu'elle ait fait parlé un peu d'elle. Cette démarche me 
+                                permet d'éviter de perdre trop de temps dans des projets de grandes anvergures que je ne finirais probablement pas. Voir petit et évoluer si ça
+                                fonctionne.
                             </p>
-                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/scout-1.JPG"><img class="img-proof" src="images/scout-1.JPG" alt="Photo de Nicolas en camp" /></a>
-                            <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/scout-2.JPG"><img class="img-proof" src="images/scout-2.JPG" alt="Photo de Nicolas en camp" /></a>
+                            <a href="https://github.com/nmartou/Logistic-Game-Manager">Lien vers le projet GitHub</a>
                         </div>
                     </section>
+                    
+                <
             </section>
 
             <!-- Footer -->
