fix: css changes

--- a/hackaton.html
+++ b/hackaton.html
@@ -6,6 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <style>
+            td.end-td {
+                border-top: solid 1px;
+            }
+
+            .img-proof {
+                max-width: 300px;
+                max-height: 300px;
+            }
+        </style>
 	</head>
 	<body class="is-preload">
 
@@ -41,6 +51,16 @@
                             <a href="https://github.com/nmartou/portfolio.github.io/blob/master/images/cyber-3.PNG"><img class="img-proof" src="images/cyber-3.PNG" alt="Screenshot de la présentation de l'édition 2022" /></a>
                         </div>
                     </section>
+                    <style>
+            td.end-td {
+                border-top: solid 1px;
+            }
+
+            .img-proof {
+                max-width: 300px;
+                max-height: 300px;
+            }
+        </style>
             </section>
 
             <!-- Footer -->
