--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+            td.end-td {
+                border-top: solid 1px;
+            }
+
+            .img-proof {
+                max-width: 300px;
+                max-height: 300px;
+            }
+        </style>
 	</head>
 	<body class="is-preload">
 
@@ -166,7 +176,7 @@
 											<td class="end-td"><b>Total</b></td>
 											<td class="end-td">1020</td>
 											<td class="end-td">62h30</td>
-											<td class="end-td"><a href="">ici</a></td>
+											<td class="end-td"></td>
 										</tr>
 									</table>
 								</div>
