--- a/devday.html
+++ b/devday.html
@@ -6,6 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <style>
+            td.end-td {
+                border-top: solid 1px;
+            }
+
+            .img-proof {
+                max-width: 300px;
+                max-height: 300px;
+            }
+        </style>
 	</head>
 	<body class="is-preload">
 
